objects/Customer_Win_Recommendation__c.object
<CustomObject>
    <fields>
        <fullName>BE__c</fullName>
        <label>BE</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>saleshub</fullName>
                </value>
                <value>
                    <fullName>learningmaps</fullName>
                </value>
                <value>
                    <fullName>customerwins</fullName>
                </value>
                <value>
                    <fullName>customerstories</fullName>
                </value>
                <value>
                    <fullName>Sales Presentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Customer_Win_Recommendations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sub_BE__c</fullName>
        <label>Sub BE</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cwAccount_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwCompetitors__c</fullName>
        <label>Competitors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwFiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwIndustry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwPrimary_Technology__c</fullName>
        <label>Primary Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwRegion__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwSegments__c</fullName>
        <label>Segments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwTheater__c</fullName>
        <label>Theater</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwVertical__c</fullName>
        <label>Vertical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_modified__c</fullName>
        <label>Last Modified</label>
        <type>DateTime</type>
    </fields>
    <label>Sales Connect Recommendation</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Customer Win Recommendations ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Connect Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>